@startuml

class Central{
- int precio
+ Central(int precio)
+ int CambiarPrecio(int n)
+ int ConsultarPrecio()
}

abstract class TarjetaSube{
- Central central
+ TarjetaSube(Central central)
+ ConsultarPrecio()
# boolean PuedeViajar()
+ boolean viajar()
}

class TarjetaRecargable{
- int saldo
+ TarjetaRecargable(Central central)
+ void Recargar(int n)
+ int ConsutarSaldo()
+ ConsultarPrecio()
# boolean PuedeViajar()
+ boolean viajar()
}

class TarjetaFija{
- int viajes
+ TarjetaFija(int viajes, Central central)
+ int ConsultarViajes()
# boolean PuedeViajar()
+ boolean viajar()
}

class RecargableDescuento{
- int descuento
+ RecargableDescuento(int descuento, Central central)
+ ConsultarPrecio()
}

Central --* TarjetaSube
TarjetaSube <|-- TarjetaRecargable
TarjetaSube <|-- TarjetaFija
TarjetaRecargable <|-- RecargableDescuento

@enduml